added close modal

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 
 <div class="container">
     <h1 class="welcome">Добро пожаловать!</h1>
+    <p></p>
     <center><button class="open-modal btn btn-danger btn-lg">Модальное окно</button></center>
 </div>
 
 
 <script src="js/app.js"></script>
 <script src="js/plugin/modal.js"></script>
+<script src="js/modal-index.js"></script>
 </body>
 </html>
