--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Приложение</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,7 +25,7 @@
 
 
 <script src="js/app.js"></script>
-<script src="js/plugin/modal.js"></script>
 <script src="js/modal-index.js"></script>
+<script src="js/plugin/modal.js"></script>
 </body>
 </html>
