--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Приложение</title>
-    <!-- CSS only -->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- Animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="style.css">
+    <!-- Style -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Modal plugin -->
+    <link rel="stylesheet" href="css/plugin/modal.css">
+    <!-- Slider plugin -->
+    <link rel="stylesheet" href="css/plugin/slider.css">
 </head>
 <body>
 <nav class="navbar navbar-light bg-light">
@@ -17,15 +23,49 @@
     </div>
 </nav>
 
+
+<div class="row">
+    <div class="col-12">
+
+
+
+
+
+<div id="viewport">
+    <div class="slider-nav">
+    <div class="navigation">
+        <a><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="darkgray" class="bi bi-chevron-double-left" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+            <path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+        </svg></a>
+        <a><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="darkgray" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
+            <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
+        </svg></a>
+    </div>
+    </div>
+    <div class="slider" style="left: 0">
+        <div class="slide"><img src="img/carousel/1.jpg" alt=""></div>
+        <div class="slide"><img src="img/carousel/2.jpg" alt=""></div>
+        <div class="slide"><img src="img/carousel/3.jpg" alt=""></div>
+        <div class="slide"><img src="img/carousel/4.jpg" alt=""></div>
+    </div>
+</div>
+
+
+
+    </div>
+</div>
+
 <div class="container">
-    <h1 class="welcome">Добро пожаловать!</h1>
-    <p></p>
     <center><button class="open-modal btn btn-danger btn-lg">Модальное окно</button></center>
 </div>
 
 
 <script src="js/app.js"></script>
-<script src="js/modal-index.js"></script>
+<!-- settings.js - Settings for plugin -->
+<script src="js/settings.js"></script>
 <script src="js/plugin/modal.js"></script>
+<script src="js/plugin/slider.js"></script>
 </body>
 </html>
