--- a/index.html
+++ b/index.html
@@ -23,14 +23,6 @@
     </div>
 </nav>
 
-
-<div class="row">
-    <div class="col-12">
-
-
-
-
-
 <div id="viewport">
     <div class="slider-nav">
     <div class="navigation">
@@ -38,6 +30,7 @@
             <path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
             <path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
         </svg></a>
+        <button class="open-modal btn btn-primary btn-lg">Модальное окно</button>
         <a><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="darkgray" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
             <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
@@ -51,16 +44,6 @@
         <div class="slide"><img src="img/carousel/4.jpg" alt=""></div>
     </div>
 </div>
-
-
-
-    </div>
-</div>
-
-<div class="container">
-    <center><button class="open-modal btn btn-danger btn-lg">Модальное окно</button></center>
-</div>
-
 
 <script src="js/app.js"></script>
 <!-- settings.js - Settings for plugin -->
