--- a/index.html
+++ b/index.html
@@ -25,26 +25,30 @@
 
 <div id="viewport">
     <div class="slider-nav">
-    <div class="navigation">
-        <a><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="darkgray" class="bi bi-chevron-double-left" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-            <path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-        </svg></a>
-        <button class="open-modal btn btn-primary btn-lg">Модальное окно</button>
-        <a><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="darkgray" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
-            <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
-        </svg></a>
+        <div class="navigation">
+            <a class="left-slide"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="darkgray" class="bi bi-chevron-double-left" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+                <path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+            </svg></a>
+            <div class="hello">
+            <h1>Добро пожаловать!</h1>
+            <button class="open-modal btn btn-primary btn-lg">Информация</button>
+            </div>
+
+            <a class="right-slide"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="darkgray" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
+                <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
+            </svg></a>
+
+        </div>
     </div>
-    </div>
-    <div class="slider" style="left: 0">
+    <div class="slider" style="left: 0px">
         <div class="slide"><img src="img/carousel/1.jpg" alt=""></div>
         <div class="slide"><img src="img/carousel/2.jpg" alt=""></div>
         <div class="slide"><img src="img/carousel/3.jpg" alt=""></div>
         <div class="slide"><img src="img/carousel/4.jpg" alt=""></div>
     </div>
 </div>
-
 <script src="js/app.js"></script>
 <!-- settings.js - Settings for plugin -->
 <script src="js/settings.js"></script>
