--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
     </div>
 </nav>
 
+<div class="flex-container">
+    <div class="absolute-container">
+        <div class="center-window">
+            <div class="title">
+                <h1>Добро пожаловать!</h1>
+                <h3>Какой-то рекламный текст, чтобы твоя мамаша повелась!</h3>
+            </div>
+            <button id="btn-open-modal" class="btn btn-primary btn-lg">Информация</button>
+            <a class="down"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="darkgray" class="bi bi-chevron-compact-down" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"/>
+            </svg></a>
+        </div>
+    </div>
+</div>
+
+<!-- start slider -->
 <div id="viewport">
     <div class="slider-nav">
         <div class="navigation">
@@ -30,16 +46,10 @@
                 <path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
                 <path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
             </svg></a>
-            <div class="hello">
-            <h1>Добро пожаловать!</h1>
-            <button class="open-modal btn btn-primary btn-lg">Информация</button>
-            </div>
-
             <a class="right-slide"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="darkgray" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
                 <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
             </svg></a>
-
         </div>
     </div>
     <div class="slider" style="left: 0px">
@@ -49,6 +59,7 @@
         <div class="slide"><img src="img/carousel/4.jpg" alt=""></div>
     </div>
 </div>
+<!-- stop slider -->
 <script src="js/app.js"></script>
 <!-- settings.js - Settings for plugin -->
 <script src="js/settings.js"></script>
