--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <div class="absolute-container">
         <div class="center-window">
             <div class="title">
-                <h1>Добро пожаловать!</h1>
-                <h3>Какой-то рекламный текст, чтобы твоя мамаша повелась!</h3>
+                <h1 class="titleHtml"></h1>
+                <h3 class="description"></h3>
             </div>
+            <span></span>
             <a class="down"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="darkgray" class="bi bi-chevron-compact-down" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"/>
             </svg></a>
@@ -38,8 +39,8 @@
     </div>
 </div>
 
-<script src="js/app.js"></script>
 <script src="js/settings.js"></script>
+<script src="js/app.js"></script>
 <script src="js/plugin/modal.js"></script>
 <script src="js/plugin/slider.js"></script>
 </body>
